Fixed printing overflow issues and added a '/' to differentiating print with hint options

--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -2,11 +2,13 @@
 
     @page {
         margin-top:20mm;
-        margin-bottom:10mm;
+        margin-bottom:5mm;
     }
 
     body {
-        margin: 0mm 5mm 5mm 5mm;
+        margin: 5mm 5mm 0mm 5mm;
+        height:auto;
+        padding-bottom: 0px;
     }
 
     a[href]:after {
@@ -88,6 +90,7 @@
 
     .tabs-content.ru_tabs {
         border: 0 !important;
+        margin-bottom: 0px !important;
     }
 
     .tabs-content.ru_tabs .content {
@@ -175,7 +178,7 @@
 
     .bg-wrap {
         padding-bottom: 0;
-        padding:0mm 10mm 10mm 10mm;
+        padding:0mm 10mm 0mm 10mm;
     }
 
     .print-logo {
